--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <H1>espacio experimetal Abierto</H1>
 
-            <img src="img/GU LOGO.png" alt="Trulli" width="150" height="100">
+            <img src="LOGO.png" alt="Trulli" width="150" height="100">
             
     </header>
 
