--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
         <h2>Entornos de programación código</h2>
         <p><a href="https://hourofpython.com/una-introduccion-visual-a-python/index.html">Python en trinket</a></p>
-       
+
+        <h2>ciberseguridad</h2>
+        <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
+        <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
+        <p><a href= ""> </a></p>
+        
         <h2>Desarrollo web</h2>
         <p><a href= "https://www.netlify.com/"> NETLIFY subir una pagina web a internet </a></p>
         <p><a href= "https://github.com/"> GITHUB plataforma colaborativa de proyectos web </a></p>
