--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>ciberseguridad</h2>
         <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
         <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
-        <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> </a>Phishing recurso</p>
+        <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> Phishing recurso </a> </p>
         
         <h2>Desarrollo web</h2>
         <p><a href= "https://www.netlify.com/"> NETLIFY subir una pagina web a internet </a></p>
