--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Entornos de programación de bloques</h2>
         <p><a href="https://scratch.mit.edu/">Entorno de desarrollo Scratch</a></p>
         <p><a href="https://makecode.microbit.org/">Entorno de desarrollo Makecode</a></p>
+        <p><a href="https://snap.berkeley.edu/snap/">Entorno de desarrollo Snap</a></p>
 
         <h2>Entornos de programación código</h2>
         <p><a href="https://hourofpython.com/una-introduccion-visual-a-python/index.html">Python en trinket</a></p>
