--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
         <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
         <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> Phishing recurso </a> </p>
+        <h2>Ineligencia artifficial</h2>
         
         <h2>Desarrollo web</h2>
         <p><a href= "https://www.netlify.com/"> NETLIFY subir una pagina web a internet </a></p>
