--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Entornos de programación código</h2>
         <p><a href="https://hourofpython.com/una-introduccion-visual-a-python/index.html">Python en trinket</a></p>
         
-        <h2>Aprendizaje automatico</h2>
+        <h2>Inteligencia Artificial</h2>
 
         <p><a href="https://imaginaryorg.notion.site/INTELIGENCIA-ARTIFICIAL-M-DULOS-INTERACTIVOS-PARA-LA-ENSE-ANZA-11a6b3b834548056a67fecec6a909f97">Imaginary</a></p>
         <p><a href="https://quickdraw.withgoogle.com/?locale=es">QuickandDraw</a></p>
@@ -33,7 +33,6 @@
         <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
         <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
         <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> Phishing recurso </a> </p>
-        <h2>Inteligencia artificial</h2>
         
         <h2>Desarrollo web</h2>
         <p><a href= "https://www.netlify.com/"> NETLIFY subir una pagina web a internet </a></p>
