--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <h2>Inteligencia Artificial</h2>
 
-        <p><a href="https://t1p.de/modulos-ia">Imaginary</a></p>
+        <p><a href="https://imaginaryorg.notion.site/INTELIGENCIA-ARTIFICIAL-M-DULOS-INTERACTIVOS-PARA-LA-ENSE-ANZA-11a6b3b834548056a67fecec6a909f97">Imaginary</a></p>
         <p><a href="https://quickdraw.withgoogle.com/">QuickandDraw</a></p>
         
         <h2>ciberseguridad</h2>
