--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <header>
-        <H1>espacio experimetal Abierto</H1>
+        <H1>Espacio Experimetal Abierto</H1>
 
             <img src="GU LOGO.png" alt="Trulli" width="150" height="100">
             
