--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
         <p><a href="https://quickdraw.withgoogle.com/">QuickandDraw</a></p>
         <p><a href="https://web.learningml.org/home-spanish/">MachineLearning</a></p>
         <p><a href="https://www.chicos.net/humania/">humanIA</a></p>
+        <p><a href="https://suno.com/create">Musica IA</a></p>
+        
         
         <h2>Ciberseguridad</h2>
         <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
         <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
         <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> Phishing recurso </a> </p>
+        <p><a href= "https://www.gub.uy/agencia-gobierno-electronico-sociedad-informacion-conocimiento/sites/agencia-gobierno-electronico-sociedad-informacion-conocimiento/files/documentos/publicaciones/Juego_CartasTrivia.pdf"> Cartas trivia </a> </p>
 
          <h2>Ingenio</h2>
         <p><a href= "https://juegosdelogica.net/juegosdeestrategia/camaleones.php"> juego ingenio </a></p>
