--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <h2>Ciberseguridad</h2>
         <p><a href= "https://cyberscouts.osi.es/child/app/main.html?apptype=child"> juego ciberseguridad </a></p>
         <p><a href= "https://password.kaspersky.com/es/"> juego de contraseñas </a></p>
+        <p><a href= "https://estafaliens.uy/"> juego Estafaliens </a></p>
         <p><a href= "https://phishingquiz.withgoogle.com/?hl=es"> Phishing recurso </a> </p>
         <p><a href= "https://www.gub.uy/agencia-gobierno-electronico-sociedad-informacion-conocimiento/sites/agencia-gobierno-electronico-sociedad-informacion-conocimiento/files/documentos/publicaciones/Juego_CartasTrivia.pdf"> Cartas trivia </a> </p>
 
